# QtConsole

./: README.md
ClassesOrigin/: CMakeLists.txt  main.cpp  вектор (об инкапсуляции).cpp  зоопарк (о наследовании).cpp  координаты (о наследовании и полиморфизме).cpp  файлы (об абстрактном классе и полиморфизме) — копия.cpp
Friendship/: CMakeLists.txt  main.cpp
NestedClasses-Libraries-Namespaces/: CMakeLists.txt  list.h  main.cpp  matrix.cpp  matrix.h
Operators/: CMakeLists.txt  Вектор (перегрузка операторов).cpp  Слайс (полиморфизм + перегрузка операторов).cpp
Static/: CMakeLists.txt  main.cpp
Unions/: CMakeLists.txt  main.cpp
